Remove box around intro/profile, enhance particles effect across entire website

--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
     <div class="project-card">
       <h3>AI-Powered Career Guidance Portal</h3>
       <p>AI-powered system to guide students in choosing suitable careers.</p>
-      <a href="https://github.com/Hacker3S" target="_blank">View on GitHub →</a>
+      <a href="https://github.com/YOURUSERNAME/devops-lab" target="_blank">View on GitHub →</a>
     </div>
     
     <div class="project-card">
       <h3>DevOps Mini Lab</h3>
       <p>CI/CD automation using GitHub Actions and Docker.</p>
-      <a href="https://github.com/Hacker3S" target="_blank">View on GitHub →</a>
+      <a href="https://github.com/YOURUSERNAME/devops-lab" target="_blank">View on GitHub →</a>
     </div>    
   </div>
 </section>
@@ -130,10 +130,10 @@
       shawnsreeju@karunya.edu.in
     </a>
     </p>
-    <p><a href="https://www.linkedin.com/in/shawn-sreeju-sampath/" target="_blank">
+    <p><a href="https://www.linkedin.com/in/YOUR-LINKEDIN-USERNAME/" target="_blank">
       LinkedIn
     </a>
-     | <a href="https://github.com/Hacker3S" target="_blank">
+     | <a href="https://github.com/YOURUSERNAME" target="_blank">
       GitHub
     </a>
     </p>
@@ -148,8 +148,8 @@
 
 <div class="social-sidebar">
   <a href="mailto:shawnsreeju@karunya.edu.in">✉</a>
-  <a href="https://github.com/Hacker3S" target="_blank">GitHub</a>
-  <a href="https://www.linkedin.com/in/shawn-sreeju-sampath/" target="_blank">LinkedIn</a>
+  <a href="https://github.com/YOURUSERNAME" target="_blank">GitHub</a>
+  <a href="https://www.linkedin.com/in/YOURUSERNAME/" target="_blank">LinkedIn</a>
 </div>
 
 <script src="script.js"></script>
