Update portfolio HTML, CSS, and JS

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
     <h1>DevOps Engineer & Cloud Enthusiast</h1>
     <p>I design reliable systems, automate workflows, and build scalable infrastructure.</p>
     <div class="hero-buttons">
-      <a href="resume.pdf" download class="primary-btn">Download Resume</a>
+      <a href="./resume.pdf" download class="primary-btn">Download Resume</a>
       <a href="#contact" class="secondary-btn">Contact Me</a>
     </div>
   </div>
   <div class="hero-image">
-    <img src="profile.jpg" alt="Shawn Profile Photo">
+    <img src="./profile.jpg" alt="Shawn Profile Photo">
   </div>
   </div>
 </section>
